force-app/main/default/objects/Journal_Entry__c/fields/Approved_Time__c.field-meta.xml
<CustomField>
    <fullName>Approved_Time__c</fullName>
    <label>Approved Time</label>
    <type>Date</type>
</CustomField>